Closed Bug 104480 Opened 24 years ago Closed 24 years ago

EqualsIgnoreCase(nsAutoString(foo)) is bad and should die

Categories

(Core :: XPCOM, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla0.9.8

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

There seem to be a number of occurences of this pattern in the tree. We should kill them off.
Priority: -- → P3
Target Milestone: --- → mozilla0.9.8
Alec, jag, would you review? The change to intl/locale/src/mac/nsDateTimeFormatMac.cpp may require adding unicharutil to the mac build magic; the xml already contains it, but someone who can build mac should check....
Comment on attachment 64706 [details] [diff] [review] Patch. There aren't that many, actually. sr=jag, but your indentation is off in a few places (or are you trying to stay within 80 chars?)
Attachment #64706 - Flags: superreview+
no, those files just use tabs for indentation for all their code and I used spaced for mine, as usual. Will fix before checking in.
Comment on attachment 64706 [details] [diff] [review] Patch. There aren't that many, actually. thanks for catching that - yeah, and please fix the indentation - if you can't fit without 80 cols, either rearrange the line again, or let the line overflow, but don't short-indent the line. r=alecf with the indentation fixes
Attachment #64706 - Flags: review+
alec, could you do a quick build test on your mac?
ok, but it will take a while. (haven't built on my mac in a few days!)
pinkerton built and it builds fine. Checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Component: String → XPCOM
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: