Bug 104480.  "EqualsIgnoreCase(nsAutoString(foo)) is bad and should die." r=alecf, sr=jag